--- a/src/style.css
+++ b/src/style.css
@@ -1,76 +1,111 @@
-html, body {
-    margin: 0;
-    padding: 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
 :root {
-    --light-gray: rgb(157, 157, 157);
+  --light-gray: rgb(157, 157, 157);
 }
 
 header {
-    background-color: white;
-    color: white;
-    border-bottom: 1px solid var(--light-gray);
+  background-color: white;
+  color: white;
+  border-bottom: 1px solid var(--light-gray);
+  padding-left: 25px;
 }
 
 .sidebar {
-    background-color: white;
-    color: black;
-    width: 20%;
-    min-width: 300px;
-    display: flex;
-    flex-direction: column;
-    border-right: 1px solid var(--light-gray);
+  background-color: white;
+  color: black;
+  width: 20%;
+  min-width: 300px;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid var(--light-gray);
+  padding-left: 25px;
+  padding-top: 25px;
 }
 
 .task-container {
-    background-color: #ffffff;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    padding: 20px;
+  background-color: #f9fcff;
+  width: 80%;
+}
+
+.task-container-header {
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 300;
+    font-size: 2rem;
 }
 
 .app-content {
-    display: flex;
-    margin: 0;
-    border-bottom: 1px solid var(--light-gray);
+  display: flex;
+  margin: 0;
+  border-bottom: 1px solid var(--light-gray);
 }
 
 .all-tasks-button,
 .project-button,
-.add-task {
-    border: none;
-    color: black;
-    font-weight: bold;
-    background-color: transparent;
-    text-align: left;
+.add-task-button {
+  border: none;
+  color: rgb(0, 0, 0);
+  font-weight: 400;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: transparent;
+  text-align: left;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding: 8px;
+  margin: 4px;
+}
+
+.sidebar-icon {
+  height: 1rem;
+  width: auto;
+}
+
+.right-arrow {
+  height: 0.75rem;
+  width: auto;
 }
 
 .poop-icon {
-    height: 3rem;
-    width: auto;
+  height: 3rem;
+  width: auto;
 }
 
 .title-and-icon {
-    display: flex;
-    gap: 8px;
-    align-items: center;
-    margin: 8px;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  margin: 8px;
 }
 
 .app-title {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-transform: lowercase;
-    color: rgb(40, 30, 22);
-    font-size: 3rem;
-    font-weight: 200;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-transform: lowercase;
+  color: rgb(40, 30, 22);
+  font-size: 3rem;
+  font-weight: 200;
 }
 
 .task {
-    border: none;
-    padding: 10px;
-    background-color: white;
-    width: 100%;
+  border: 1px solid var(--light-gray);
+  padding: 20px;
+  background-color: white;
+  width: 100%;
+}
+
+.odin-blurb {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-align: center;
+  font-weight: 300;
+  font-size: 0.75rem;
+  padding: 20px;
 }
