--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,10 @@ header {
   width: 80%;
 }
 
+.task-container-grid {
+    padding: 20px;
+}
+
 .task-container-header {
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -47,7 +51,8 @@ header {
 
 .all-tasks-button,
 .project-button,
-.add-task-button {
+.add-task-button,
+.added-project-button {
   border: none;
   color: rgb(0, 0, 0);
   font-weight: 400;
@@ -98,7 +103,9 @@ header {
   border: 1px solid var(--light-gray);
   padding: 20px;
   background-color: white;
-  width: 100%;
+  border-radius: 24px;
+  margin-bottom: 24px;
+  width: 500px;
 }
 
 .odin-blurb {
