--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,8 @@ header {
 .all-tasks-button,
 .project-button,
 .add-task-button,
-.added-project-button {
+.project-button,
+.project-dropdown-button {
   border: none;
   color: rgb(0, 0, 0);
   font-weight: 400;
@@ -66,6 +67,10 @@ header {
   gap: 4px;
   padding: 8px;
   margin: 4px;
+}
+
+.project-button {
+  padding-left: 5ch;
 }
 
 .sidebar-icon {
