--- a/src/style.css
+++ b/src/style.css
@@ -33,14 +33,15 @@ header {
 }
 
 .task-container-grid {
-    padding: 20px;
+  padding: 20px;
 }
 
 .task-container-header {
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 300;
-    font-size: 2rem;
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 300;
+  font-size: 2rem;
 }
 
 .app-content {
@@ -120,4 +121,46 @@ header {
   font-weight: 300;
   font-size: 0.75rem;
   padding: 20px;
+}
+
+.dialog-input {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 8px;
+}
+
+.dialog-header {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 300;
+  text-align: center;
+}
+
+.dialog {
+  padding: 60px;
+  border: 1px solid var(--light-gray);
+  border-radius: 24px;
+}
+
+.dialog-label {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 0.75rem;
+  padding-bottom: 2px;
+}
+
+.form-submit,
+.dialog-exit {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+  background-color: black;
+  border-radius: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.dialog-selector-div {
+  display: flex;
 }
