--- a/src/style.css
+++ b/src/style.css
@@ -105,7 +105,9 @@ header {
   font-weight: 200;
 }
 
-.task {
+.task-card {
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   border: 1px solid var(--light-gray);
   padding: 20px;
   background-color: white;
@@ -151,7 +153,8 @@ header {
 
 .form-submit,
 .dialog-exit {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: white;
   background-color: black;
   border-radius: 8px;
@@ -163,4 +166,27 @@ header {
 
 .dialog-selector-div {
   display: flex;
+}
+
+.task-card-button {
+  height: 2ch;
+  width: auto;
+}
+
+.task-card-top-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.task-card-bottom-div {
+  display: flex;
+}
+
+.task-card-priority,
+.task-card-project {
+  color: red;
+  border: 1px solid red;
+  border-radius: 8px;
+  padding: 2px;
 }
