Create setPriorityColor() to change priority color
Write setPriorityColor() function to change a task card's priority
color in the DOM. This function changes the class of the priority text
displayed based on whether "high", "medium", or "low" is selected.

--- a/src/style.css
+++ b/src/style.css
@@ -168,9 +168,14 @@ header {
   display: flex;
 }
 
-.task-card-button {
-  height: 2ch;
+.task-card-button-icon {
+  height: 3ch;
   width: auto;
+}
+
+.task-card-button {
+  background: none;
+  border: none;
 }
 
 .task-card-top-div {
@@ -181,12 +186,29 @@ header {
 
 .task-card-bottom-div {
   display: flex;
+  justify-content: space-between;
 }
 
 .task-card-priority,
 .task-card-project {
-  color: red;
   border: 1px solid red;
   border-radius: 8px;
   padding: 2px;
+}
+
+.low-priority {
+  color: blue;
+}
+
+.medium-priority {
+  color: yellow;
+}
+
+.high-priority {
+  color: red;
+}
+
+.task-card-bottom-right {
+  display: flex;
+  gap: 8px;
 }
