--- a/src/style.css
+++ b/src/style.css
@@ -69,6 +69,21 @@ header {
   margin: 4px;
 }
 
+.project-card-title-btn {
+  border: none;
+  color: rgb(0, 0, 0);
+  font-weight: 400;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: transparent;
+  text-align: left;
+  font-size: 1rem;
+}
+
+.project-card-content-div {
+  display: flex;
+}
+
 .project-card {
   padding-left: 5ch;
 }
@@ -105,8 +120,8 @@ header {
 }
 
 .task-card {
-   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   border: 1px solid var(--light-gray);
   padding: 20px;
   background-color: white;
@@ -222,8 +237,17 @@ header {
   width: auto;
 }
 
-.project-button {
+.project-card-button {
   border: none;
   background-color: transparent;
   padding: none;
+}
+
+#edit-project-input {
+  width: 120px;
+}
+
+#edit-project-form {
+  display: flex;
+  justify-content: left;
 }
