--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@ header {
 
 .all-tasks-button,
 .project-card,
-.add-task-button,
+.sidebar-task-button,
 .project-dropdown-button {
   border: none;
   color: rgb(0, 0, 0);
@@ -67,6 +67,14 @@ header {
   gap: 4px;
   padding: 8px;
   margin: 4px;
+}
+
+.all-tasks-button:hover,
+.project-card:hover,
+.sidebar-task-button:hover,
+.project-dropdown-button:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .project-card-title-btn {
@@ -149,6 +157,7 @@ header {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 300;
+  font-size: 1.5rem;
   text-align: center;
 }
 
@@ -165,17 +174,14 @@ header {
   padding-bottom: 2px;
 }
 
-.form-submit,
-.dialog-exit {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: white;
-  background-color: black;
-  border-radius: 8px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 8px;
-  padding-right: 8px;
+.dialog-button {
+  background-color: transparent;
+  border: none;
+}
+
+.dialog-button-icon {
+  height: 3ch;
+  width: auto;
 }
 
 .dialog-selector-div {
@@ -250,4 +256,13 @@ header {
 #edit-project-form {
   display: flex;
   justify-content: left;
+}
+
+.dialog-button-div {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.task-form {
+  padding: 2px;
 }
